prusti-tests/tests/parse/ui/predicate_fail-1.stderr
error[E0425]: cannot find value `result` in this scope
  --> $DIR/predicate_fail-1.rs:12:9
   |
12 |         result == 1
   |         ^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
